--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Groups Generator</title>
+	<!-- CSS only -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
 
   <body>
+
+	<nav class="navbar navbar-dark navbar-expand-lg bg-dark">
+		<div class="container-fluid">
+		  <a class="navbar-brand" href="#">Welcome</a>
+		</div>
+	</nav>
+	<div class="container" id = "results">
+	
+	</div>
+	  
+	<div class="container" id = "explanation">
+	
+	</div>
 	<h1> Use it to generate groups.</h1>
 	<h7> The documentation is coming.</h7>
  	 
