--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	
 	</div>
 	  
-	<div class="container" id = "explanation">
+	<div class="container-fluid"" id = "explanation">
 	
 	</div>
 	<h1> Use it to generate groups.</h1>
