--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
 		  <a class="navbar-brand" href="#">Welcome</a>
 		</div>
 	</nav>
-	<div class="container" id = "results">
+	<div class="container-fluid" id = "results">
 	
 	</div>
 	  
-	<div class="container-fluid"" id = "explanation">
+	<div class="container-fluid" id = "explanation">
 	
 	</div>
-	<h1> Use it to generate groups.</h1>
-	<h7> The documentation is coming.</h7>
  	 
   </body> 
   <script src="groups_generator.js"></script>  
