--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	<title>Groups Generator</title>
 	<!-- CSS only -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  </head>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+
+</head>
 
   <body>
 
@@ -16,14 +18,34 @@
 		  <a class="navbar-brand" href="#">Welcome</a>
 		</div>
 	</nav>
-	<div class="container-fluid" id = "results">
+
+	<!-- Generate the groups here -->
+	<br/>
+
+	<p>
+		<button class="btn btn-dark" type="button" data-bs-toggle="collapse" data-bs-target="#results" aria-expanded="false" aria-controls="results">
+		Generate Groups
+		</button>
+	  </p>
+
+
+	<div class="container-fluid collapse" id = "results">
 	
 	</div>
-	  
-	<div class="container-fluid" id = "explanation">
+
+	<br/>
+	
+	<!-- Explain how the groups are generated here-->
+	<p>
+	  <button class="btn btn-info" type="button" data-bs-toggle="collapse" data-bs-target="#explanation" aria-expanded="false" aria-controls="explanation">
+			 Explain Results
+	  </button>
+	</p>
+
+	<div class="container-fluid collapse" id="explanation">
 	
 	</div>
- 	 
+
   </body> 
   <script src="groups_generator.js"></script>  
 </html>
